fixed margin spacing

--- a/base.css
+++ b/base.css
@@ -8,7 +8,7 @@
 	--desc_height: 40px;
 }
 #gallery {
-	margin-right: calc(var(--pic_border) * var(--col));
+	margin: calc(2 * var(--pic_border));
 	gap: 0px;
 	columns: var(--col); 
 	box-sizing: border_box;	
@@ -54,13 +54,10 @@
 }
 
 #gallery img {
-	display:block;
 	vertical-align: bottom;
 	box-sizing: border-box;
 	border: var(--pic_border) solid rgba(255, 255, 255, 0);
-	display: inline-block;
 	width: 100%;
-	height: auto;
 }
 
 #main {
